Working slow blocks implementatation

--- a/PrimeCPP/solution_2/.vscode/tasks.json
+++ b/PrimeCPP/solution_2/.vscode/tasks.json
@@ -16,7 +16,7 @@
                 "primes_par.exe"
             ],
             "group": {
-                "kind": "build",
+                "kind": "test",
                 "isDefault": true
             },
             "presentation": {
