--- a/PrimeCPP/solution_2/.vscode/launch.json
+++ b/PrimeCPP/solution_2/.vscode/launch.json
@@ -11,7 +11,7 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
+            "MIMode": "lldb",           // lldb for mac, gdb for linux
             "preLaunchTask": "build",
             "setupCommands": [
                 {
